[app] fix body overflow and add message behind video

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@ body {
     margin: 0;
     background-color: rgba(250, 250, 250, 1);
     user-select: none;
+    overflow: hidden;
 }
 
 .loader {
